Add URL rewrite issue repro

--- a/AspNetFxContainer/WebFormsApp/Web.config
+++ b/AspNetFxContainer/WebFormsApp/Web.config
@@ -16,6 +16,13 @@
       </controls>
     </pages>
   </system.web>
+
+  <system.webServer>
+	<!-- Uncommenting this element causes the app to fail when containerized (all endpoints return 500) -->
+	<!--<rewrite>
+	</rewrite>-->
+  </system.webServer>
+	
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
