Add additional details on how to enable URL routing

--- a/AspNetFxContainer/WebFormsApp/Web.config
+++ b/AspNetFxContainer/WebFormsApp/Web.config
@@ -19,6 +19,12 @@
 
   <system.webServer>
 	<!-- Uncommenting this element causes the app to fail when containerized (all endpoints return 500) -->
+	<!-- To use URL rewriting, the container image needs updated to install necessary modules, as shown in
+	     https://github.com/linusyong/iis-reverse-proxy/blob/master/Dockerfile. The rewrite installer enables
+		 the rewrite section at all, and the requestRouter module enables Application Request Routing, specifically. -->
+	<!-- Installers are available from:
+	        URL Rewrite / rewrite: https://iis-umbraco.azurewebsites.net/downloads/microsoft/url-rewrite
+			ARR / requestRouter: https://www.iis.net/downloads/microsoft/application-request-routing -->
 	<!--<rewrite>
 	</rewrite>-->
   </system.webServer>
